Fikser testene.